# VeriChain

./: main.py  pyproject.toml
blockchain/: contract_manager.py  finance_report_20250921053422.xlsx  finance_report_20250921074454.xlsx  finance_report_20250921083245.xlsx  finance_report_20250921083412.xlsx  finance_report_20250921083614.xlsx  finance_report_20250921083738.xlsx  finance_report_20250921084010.xlsx  finance_report_20250921084021.xlsx  finance_report_20250921084902.xlsx  finance_report_20250921085232.xlsx  finance_report_20250921113140.xlsx  init.py  m3.py  main2.py  mm.py  nm.py  polygon_client.py  s.py
models/: init.py  offer.py  vendor.py
py_server/: .env.example  .gitignore  DEPLOYMENT.md  README.md  debug_env.py  main.py  pyproject.toml  verichain.db
py_server/app/: main.py
py_server/app/agents/: base_agent.py  evaluationagent.py  init.py  langchain_agents.py  orchestrator.py  stationery_agent.py  supply_chain_agent.py
py_server/app/api/: agents.py  ai_agent.py  dashboard.py  monitoring.py  negotiations.py  orchestration.py
py_server/app/core/: config.py
py_server/app/models/: __init__.py  database.py
py_server/app/services/: ai_service.py  auto_ordering.py  database.py  gemini_client.py  negotiation_chat.py  notifications.py  notifications_enhanced.py  pattern_analysis.py  supplier_management.py
py_server/app/utils/: logging.py
py_server/scripts/: demo.py  demo_ai_complete.py  demo_dashboard_apis.py  demo_negotiation.py  seed_database.py  start_ai_server.py  start_server.py
py_server/tests/: test_stationery_system.py
server/: .env  .env.example  .gitignore  API_TESTING_GUIDE.md  README.md  check_db.py  fix_categories.py  fix_decision_types.py  fix_enum_values.py  pyproject.toml  test_api_response.py  test_apis.py  test_inventory.py  verichain.db
server/app/: __init__.py  main.py
server/app/agents/: supply_chain_agent.py  workflow_orchestrator.py
server/app/api/: agent.py  ai_agent.py  ai_agent_backup.py  dashboard.py  inventory.py  monitoring.py  sales.py
server/app/core/: config.py  database.py  logging.py
server/app/models/: __init__.py
server/app/services/: analysis_engine.py  database.py  trend_analysis.py
server/reports/: vendor_negotiation_report_20250921_080141.xlsx  vendor_negotiation_report_20250921_082001.xlsx
server/scripts/: create_sample_data.py  init_db.py  seed_1year_data.py  seed_basic_data.py  seed_comprehensive_data.py  seed_database.py  setup.py  start_server.py  test_agent.py  test_api_complete.py  test_real_negotiation.py  vendor_negotiation_report.py
server/tests/: test_stationery_system.py
web/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml
web/app/: page.tsx
web/app/auth/forgot-password/: page.tsx
web/app/auth/login/: page.tsx
web/app/auth/signup/: page.tsx
web/app/dashboard/: layout.tsx  page.tsx
web/app/dashboard/ai-agent/: page.tsx
web/app/dashboard/analytics/: page.tsx
web/app/dashboard/enhanced/: page.tsx
web/app/dashboard/finance/: page.tsx
web/app/dashboard/inventory/: page.tsx
web/app/dashboard/scm/: page-old.tsx  page.tsx
web/app/dashboard/settings/: page.tsx
web/app/dashboard/vendors/: negotiation.tsx  page.tsx
web/components/: NotificationCenter.tsx
web/components/dashboard/: dashboard-layout.tsx  sidebar.tsx  topbar.tsx
web/lib/: api.ts
