[project]
name = "verichain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "databases>=0.9.0",
    "fastapi>=0.116.2",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "neuralprophet>=0.9.0",
    "numpy>=1.26.4",
    "pandas>=2.3.2",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
    "web3>=7.13.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=6.0.1",
    "pytest>=8.4.2",
]
