[project]
name = "verichain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.21.0",
    "databases>=0.9.0",
    "fastapi>=0.116.2",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "loguru>=0.7.3",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=6.0.1",
    "pytest>=8.4.2",
]
