[project]
name = "verichain"
version = "0.1.0"
description = "Agentic AI Framework for Supply Chain and Inventory Management"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.2",
    "uvicorn[standard]>=0.35.0",
    "langchain>=0.3.27",
    "langchain-core>=0.3.27",
    "langchain-google-genai>=2.0.8",
    "langchain-community>=0.3.27",
    "httpx>=0.28.1",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.6.1",
    "python-dotenv>=1.1.1",
    "loguru>=0.7.3",
    "aiosqlite>=0.21.0",
    "databases>=0.9.0",
    "sqlalchemy>=2.0.36",
    "asyncio-mqtt>=0.16.2",
    "tenacity>=9.0.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=6.0.1",
    "pytest>=8.4.2",
]
